--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 //fibonacci(7) = 13 (5+8).  Do this without using recursion first.  
 //If you don't know what a recursion is yet, don't worry as we'll be introducing this concept in Part 2 of this assignment.
 
-function fibonacci(num){
-    var a = 1;
-    var b = 0;
-    var temp = 0;
+// function fibonacci(num){
+//     var a = 1;
+//     var b = 0;
+//     var temp = 0;
 
-    while (num > 0){
-    temp = a; 
-    a = a + b;
-    b = temp;
-    num--;
-    }
+//     while (num > 0){
+//     temp = a; 
+//     a = a + b;
+//     b = temp;
+//     num--;
+//     }
 
-    return b;
-}
-console.log(fibonacci(4));
+//     return b;
+// }
+// console.log(fibonacci(4));
 
 //#4 Array: Second-to-Last: Return the second-to-last element of an array. Given [42, true, 4, "Liam", 7], return "Liam".  If array is too short, return null.
 // var testArr = [42, true, 4, "Liam", 7];
@@ -126,7 +126,14 @@ console.log(fibonacci(4));
 
 // console.log(doubleTrouble(testArr5));
 
-
+//Fibonacci with Recursion
+function Fib(n){
+    if (n === 0 || n === 1){
+        return n;
+    }
+    return Fib(n-2) + Fib(n-1);
+}
+console.log(Fib(10));
 
 </script>
 
