--- a/index.html
+++ b/index.html
@@ -127,13 +127,14 @@
 // console.log(doubleTrouble(testArr5));
 
 //Fibonacci with Recursion
-function Fib(n){
-    if (n === 0 || n === 1){
-        return n;
-    }
-    return Fib(n-2) + Fib(n-1);
-}
-console.log(Fib(10));
+// function Fib(n){
+//     if (n === 0 || n === 1){
+//         return n;
+//     }
+//     return Fib(n-2) + Fib(n-1);
+// }
+// console.log(Fib(10));
+
 
 </script>
 
